--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="nav" >
+		<ul class="ul" >
+			<li class="list">Home</li>
+			<li class="list">About</li>
+			<li class="list">Contact Us</li>
+			<li class="list">Itinerary</li>
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
