--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="nav" >
+	<div class="container" >
 		<ul class="ul" >
 			<li class="list">Home</li>
 			<li class="list">About</li>
